Mon Feb 24 15:58:47 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: add locale.h

	* src/gnome-genius.c: allow quitting while calculations are running
	  and add a "really want to quit dialog" to be replaced by "really
	  want to quit without saving state" dialog at some point in future.

	* src/eval.c: some leak hunting (still there are leaks)

	* lib/number_theory/misc.gel: better help string for Divides
 
	* lib/number_theory/primes.gel: make the MillerRabin config
	  param 10 times larger for IsPrime, 10^-100 should be plenty
	  small

Fri Feb 21 14:05:10 2003  George Lebl <jirka@5z.com>

	* src/funclib.c, src/mpwrap.[ch]: add IsGaussInteger,
	  IsComplexRational and IsPositiveInteger, also rename g
	  to Gravity

	* lib/number_theory/primes.gel: Add MillerRabinTest and use it
	  in IsPrime

	* lib/number_theory/*.gel: simplify argument checking in bunch of
	  places

	* src/calc.c, src/compil.[ch]: When reading compiled file allow
	  arbitrarily long record lines

Thu Feb 20 00:56:49 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/factoring.gel: it's too late and I can't think
	  and I commit things with syntax errors

Thu Feb 20 00:23:57 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/factoring.gel: implement FermatFactorization,
	  also use it as a last resort for the Factorize

Wed Feb 19 14:13:22 2003  George Lebl <jirka@5z.com>

	* src/funclib.c: better prime caching, cache up to 30000 primes,
	  rename prime to Prime, add g, the gravity constant and add
	  EulerConstant (or gamma) good for about 9k digits, doesn't
	  calculate we have an actual representation in memory.

	* lib/number_theory/*.gel: Add RemoveFactor, add some help
	  strings remove SymbolicSquareRoot (sqrt does the job well)

Wed Feb 19 09:54:03 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: add Edit menu with Copy and Paste.

	* src/mpwrap.c: minor fix for rational power, and do possibly 
	  symbolic square root in case the denominator is 2, 4, 8 or 16