@@ -1,3 +1,9 @@
+Tue Feb 25 10:27:47 2003  George Lebl <jirka@5z.com>
+
+	* src/genius.c, src/gnome-genius.c, src/calc.[ch], src/funclib.c:
+	  Add an experimental MathML output mode (for matrices only for now).
+	  Can't quite get it to work though.
+
 Mon Feb 24 15:58:47 2003  George Lebl <jirka@5z.com>
 
 	* src/mpwrap.c: add locale.h
